# fxtwitter-bot

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  debug.yml
tests/: conftest.py  test_rewrite.py
