[project]
name = "fxtwitter-bot"
version = "0.1.0"
description = "Discord bot that rewrites x.com/twitter.com links to fxtwitter.com for correct embeds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]
